Use relative urls

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -73,7 +73,7 @@
   ga('create', '{{ .Site.Author.gaID }}', 'auto');
   ga('send', 'pageview');
 </script>
-<script src="https://carnivalapp.io/sites/611/init.js"></script>
+<script src="//carnivalapp.io/sites/611/init.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", Carnival.init);
 </script>
